Logo incorporated as SVG (text not showing properly in Chrome)

--- a/index.html
+++ b/index.html
@@ -14,21 +14,51 @@ width="464.95718"
 </head>
 <body>
 <div id='logo'>
-    <svg
+<svg
    xmlns:dc="http://purl.org/dc/elements/1.1/"
    xmlns:cc="http://creativecommons.org/ns#"
    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
    xmlns:svg="http://www.w3.org/2000/svg"
    xmlns="http://www.w3.org/2000/svg"
-   width="300"
-   height="300"
-   viewBox="0 0 464.95718 441.70209"
-   id="svg4955"
-   version="1.1">
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   version="1.1"
+   id="svg5439"
+   viewBox="0 0 666.13741 607.24241"
+   height="171.3773mm"
+   width="187.99878mm"
+   inkscape:version="0.91 r13725"
+   sodipodi:docname="Logo-Styled.svg">
+  <sodipodi:namedview
+     pagecolor="#ffffff"
+     bordercolor="#666666"
+     borderopacity="1"
+     objecttolerance="10"
+     gridtolerance="10"
+     guidetolerance="10"
+     inkscape:pageopacity="0"
+     inkscape:pageshadow="2"
+     inkscape:window-width="1707"
+     inkscape:window-height="897"
+     id="namedview6127"
+     showgrid="false"
+     inkscape:zoom="0.38785786"
+     inkscape:cx="674.32778"
+     inkscape:cy="57.288703"
+     inkscape:window-x="-8"
+     inkscape:window-y="-8"
+     inkscape:window-maximized="1"
+     inkscape:current-layer="svg5439"
+     showborder="true"
+     inkscape:showpageshadow="true"
+     fit-margin-top="0"
+     fit-margin-left="0"
+     fit-margin-right="0"
+     fit-margin-bottom="0" />
   <defs
-     id="defs4957" />
+     id="defs5441" />
   <metadata
-     id="metadata4960">
+     id="metadata5444">
     <rdf:RDF>
       <cc:Work
          rdf:about="">
@@ -39,129 +69,171 @@ width="464.95718"
       </cc:Work>
     </rdf:RDF>
   </metadata>
+  <text
+     xml:space="preserve"
+     style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:semi-expanded;font-size:50px;line-height:125%;font-family:'HandelGothic BT';-inkscape-font-specification:'HandelGothic BT, Semi-Expanded';text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;fill:#444444;fill-opacity:1;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+     x="414.79465"
+     y="587.83234"
+     id="text6763"
+     sodipodi:linespacing="125%"><tspan
+       sodipodi:role="line"
+       x="414.79465"
+       y="587.83234"
+       id="tspan6765"><tspan
+         x="414.79465"
+         y="587.83234"
+         id="tspan6767">consulting</tspan></tspan></text>
+  <text
+     xml:space="preserve"
+     style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:semi-expanded;font-size:50px;line-height:125%;font-family:'HandelGothic BT';-inkscape-font-specification:'HandelGothic BT, Semi-Expanded';text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;fill:#444444;fill-opacity:1;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+     x="-3.0029299"
+     y="508.78998"
+     id="text6745"
+     sodipodi:linespacing="125%"><tspan
+       sodipodi:role="line"
+       x="-3.0029299"
+       y="508.78998"
+       id="tspan6747"><tspan
+         x="-3.0029299"
+         y="508.78998"
+         id="tspan6749">micael</tspan></tspan></text>
+  <text
+     xml:space="preserve"
+     style="font-style:normal;font-variant:normal;font-weight:normal;font-stretch:semi-expanded;font-size:50px;line-height:125%;font-family:'HandelGothic BT';-inkscape-font-specification:'HandelGothic BT, Semi-Expanded';text-align:start;letter-spacing:0px;word-spacing:0px;writing-mode:lr-tb;text-anchor:start;display:inline;fill:#444444;fill-opacity:1;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+     x="171.16006"
+     y="548.70129"
+     id="text6751"
+     sodipodi:linespacing="125%"><tspan
+       sodipodi:role="line"
+       x="171.16006"
+       y="548.70129"
+       id="tspan6753"><tspan
+         x="171.16006"
+         y="548.70129"
+         id="tspan6755">carlstedt</tspan></tspan></text>
+  <rect
+     y="453.09818"
+     x="158.63606"
+     height="113.77869"
+     width="3.9583001"
+     id="rect4501"
+     style="display:inline;opacity:1;fill:#444444;fill-opacity:1;stroke:none;stroke-width:2.45589519;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+  <rect
+     y="493.46371"
+     x="402.19003"
+     height="113.77869"
+     width="3.9579999"
+     id="rect4501-7"
+     style="display:inline;opacity:1;fill:#444444;fill-opacity:1;stroke:none;stroke-width:2.45589519;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+  <circle
+     style="display:inline;fill:#245ab3;fill-opacity:0.73372779;fill-rule:nonzero;stroke:none;stroke-width:15;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+     id="circle5262"
+     cx="-306.07968"
+     cy="234.9747"
+     r="51.42857"
+     transform="scale(-1,1)" />
   <g
-     transform="translate(-127.27765,-270.99942)"
-     id="layer1">
-    <ellipse
-       ry="103.65473"
-       rx="102.22616"
-       cy="601.77991"
-       cx="236.77068"
-       id="ellipse6300"
-       style="display:inline;fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#900000;stroke-width:14.533741;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
-    <ellipse
-       ry="78.063263"
-       rx="82.348976"
-       cy="353.43979"
-       cx="279.00214"
-       id="ellipse6304"
-       style="display:inline;fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#00589a;stroke-width:8.75422764;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
-    <ellipse
-       transform="matrix(0.99258572,-0.12154669,0.1178131,0.99303579,0,0)"
-       ry="65.160393"
-       rx="65.770515"
-       cy="520.77399"
-       cx="462.57486"
-       id="ellipse6306"
-       style="display:inline;fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#f1ca1e;stroke-width:12.00217247;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+     style="display:inline;fill:#444444;fill-opacity:1"
+     id="g5322"
+     transform="matrix(-1,0,0,1,1570.3015,10.496139)">
     <circle
-       r="51.846859"
-       cy="614.63708"
-       cx="451.92783"
-       id="circle6308"
-       style="display:inline;fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#00a800;stroke-width:10;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+       style="fill:#444444;fill-opacity:1"
+       r="65"
+       cy="315.85162"
+       cx="1118.5126"
+       id="circle5324" />
     <circle
-       r="51.42857"
-       style="display:inline;fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#000000;stroke-width:15;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="circle6302"
-       cx="382.78503"
-       cy="510.35129" />
-    <ellipse
-       style="display:inline;fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#900000;stroke-width:14.533741;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="ellipse3456"
-       cx="236.77068"
-       cy="601.77991"
-       rx="102.22616"
-       ry="103.65473" />
-    <ellipse
-       style="display:inline;fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#00589a;stroke-width:8.75422764;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="ellipse3458"
-       cx="279.00214"
-       cy="353.43979"
-       rx="82.348976"
-       ry="78.063263" />
-    <ellipse
-       style="display:inline;fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#f1ca1e;stroke-width:12.00217247;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="ellipse3460"
-       cx="462.57486"
-       cy="520.77399"
-       rx="65.770515"
-       ry="65.160393"
-       transform="matrix(0.99258572,-0.12154669,0.1178131,0.99303579,0,0)" />
+       style="fill:#444444;fill-opacity:1"
+       r="50"
+       cy="67.155472"
+       cx="1161.4314"
+       id="circle5326" />
     <circle
-       r="51.846859"
-       style="display:inline;fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#00a800;stroke-width:10;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-       id="circle3462"
-       cx="451.92783"
-       cy="614.63708" />
+       style="fill:#444444;fill-opacity:1"
+       r="30"
+       cy="224.49446"
+       cx="1260.9412"
+       id="circle5328" />
     <circle
-       r="51.42857"
-       cy="510.35129"
-       cx="382.78503"
-       id="circle3464"
-       style="display:inline;fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#000000;stroke-width:15;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
-    <g
-       style="display:inline;fill:#4d4d4d"
-       id="g6407"
-       transform="translate(-881.43681,285.8727)">
-      <circle
-         style="fill:#28170b;fill-opacity:1"
-         r="65"
-         cy="315.85162"
-         cx="1118.5126"
-         id="circle6284" />
-      <circle
-         style="fill:#28170b;fill-opacity:1"
-         r="50"
-         cy="67.155472"
-         cx="1161.4314"
-         id="circle6286" />
-      <circle
-         style="fill:#28170b;fill-opacity:1"
-         r="30"
-         cy="224.49446"
-         cx="1260.9412"
-         id="circle6288" />
-      <circle
-         style="fill:#28170b;fill-opacity:1"
-         r="35"
-         cy="174.51012"
-         cx="1403.7625"
-         id="circle6290" />
-      <circle
-         style="fill:#28170b;fill-opacity:1"
-         r="30"
-         cy="328.07648"
-         cx="1335.3705"
-         id="circle6292" />
-      <path
-         id="path6294"
-         d="m 1188.1574,109.41306 56.7481,89.72685"
-         style="fill:#28170b;fill-opacity:1;fill-rule:evenodd;stroke:#28170b;stroke-width:20;stroke-linecap:square;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
-      <path
-         id="path6296"
-         d="m 1173.2238,280.75854 62.466,-40.06726"
-         style="fill:#28170b;fill-opacity:1;fill-rule:evenodd;stroke:#28170b;stroke-width:20;stroke-linecap:square;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
-      <path
-         id="path6298"
-         d="m 1370.7277,186.07153 -81.4711,28.51314"
-         style="fill:#28170b;fill-opacity:1;fill-rule:evenodd;stroke:#28170b;stroke-width:20;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
-      <path
-         id="path6310"
-         d="m 1318.1515,303.51053 -58.6389,-83.6589"
-         style="fill:#28170b;fill-opacity:1;fill-rule:evenodd;stroke:#28170b;stroke-width:20;stroke-linecap:square;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
-    </g>
+       style="fill:#444444;fill-opacity:1"
+       r="35"
+       cy="174.51012"
+       cx="1403.7625"
+       id="circle5330" />
+    <circle
+       style="fill:#444444;fill-opacity:1"
+       r="30"
+       cy="328.07648"
+       cx="1335.3705"
+       id="circle5332" />
+    <path
+       inkscape:connector-curvature="3"
+       inkscape:connector-type="polyline"
+       id="path5334"
+       d="m 1189.2623,111.07034 56.7481,89.72685"
+       style="fill:#444444;fill-opacity:1;fill-rule:evenodd;stroke:#444444;stroke-width:20;stroke-linecap:square;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+    <path
+       inkscape:connector-curvature="3"
+       inkscape:connector-type="polyline"
+       id="path5336"
+       d="m 1173.2238,280.75854 62.466,-40.06726"
+       style="fill:#444444;fill-opacity:1;fill-rule:evenodd;stroke:#444444;stroke-width:20;stroke-linecap:square;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+    <path
+       inkscape:connector-curvature="3"
+       inkscape:connector-type="polyline"
+       id="path5338"
+       d="m 1370.7277,186.07153 -81.4711,28.51314"
+       style="fill:#444444;fill-opacity:1;fill-rule:evenodd;stroke:#444444;stroke-width:20;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+    <path
+       inkscape:connector-curvature="3"
+       inkscape:connector-type="polyline"
+       id="path5340"
+       d="m 1318.1515,303.51053 -58.6389,-83.6589"
+       style="fill:#444444;fill-opacity:1;fill-rule:evenodd;stroke:#444444;stroke-width:20;stroke-linecap:square;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+    <path
+       transform="translate(0,-387.63782)"
+       inkscape:connector-curvature="0"
+       id="path5342"
+       d="m 1152.8451,503.74565 c -25.6995,-4.65084 -43.8394,-28.77553 -40.8292,-54.29945 3.0094,-25.51738 23.9691,-44.27342 49.4751,-44.27342 14.2226,0 26.3143,5.30823 36.2274,15.90366 4.5664,4.88072 6.8871,8.45924 9.6345,14.85629 2.8602,6.65955 3.7669,12.22021 3.4434,21.1187 -0.2911,8.00623 -1.607,13.51717 -4.6946,19.66067 -1.8305,3.6421 -6.3381,10.15236 -8.3915,12.11963 l -1.6365,1.56792 -2.2994,-3.66732 c -1.2647,-2.01702 -2.3773,-3.66732 -2.4726,-3.66732 -0.6382,0 -16.8287,10.69476 -16.8287,11.11634 0,0.29052 0.8701,1.8202 1.9335,3.3993 1.0635,1.57909 1.9335,3.15237 1.9335,3.49619 0,0.3438 -1.4294,1.02061 -3.1764,1.504 -7.6992,2.13028 -14.9054,2.50638 -22.3185,1.16481 z"
+       style="fill:#444444;fill-opacity:1;stroke:none;stroke-width:8.75399971;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+    <path
+       transform="translate(0,-387.63782)"
+       inkscape:connector-curvature="0"
+       id="path5344"
+       d="m 1152.8451,503.74565 c -25.6995,-4.65084 -43.8394,-28.77553 -40.8292,-54.29945 3.0094,-25.51738 23.9691,-44.27342 49.4751,-44.27342 14.2226,0 26.3143,5.30823 36.2274,15.90366 4.5664,4.88072 6.8871,8.45924 9.6345,14.85629 2.8602,6.65955 3.7669,12.22021 3.4434,21.1187 -0.2911,8.00623 -1.607,13.51717 -4.6946,19.66067 -1.8305,3.6421 -6.3381,10.15236 -8.3915,12.11963 l -1.6365,1.56792 -2.2994,-3.66732 c -1.2647,-2.01702 -2.3773,-3.66732 -2.4726,-3.66732 -0.6382,0 -16.8287,10.69476 -16.8287,11.11634 0,0.29052 0.8701,1.8202 1.9335,3.3993 1.0635,1.57909 1.9335,3.15237 1.9335,3.49619 0,0.3438 -1.4294,1.02061 -3.1764,1.504 -7.6992,2.13028 -14.9054,2.50638 -22.3185,1.16481 z"
+       style="fill:#444444;fill-opacity:1;stroke:none;stroke-width:8.75399971;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
   </g>
+  <ellipse
+     transform="scale(-1,1)"
+     style="display:inline;fill:#4a8c20;fill-opacity:0.51372549;fill-rule:nonzero;stroke:none;stroke-width:14.5340004;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0.51479337"
+     id="ellipse5232"
+     cx="-452.09396"
+     cy="326.40335"
+     rx="102.22616"
+     ry="103.65473" />
+  <ellipse
+     transform="scale(-1,1)"
+     style="display:inline;fill:#7f7429;fill-opacity:0.51372549;fill-rule:nonzero;stroke:none;stroke-width:8.75422764;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+     id="ellipse5234"
+     cx="-409.86252"
+     cy="78.063263"
+     rx="82.348976"
+     ry="78.063263" />
+  <ellipse
+     style="display:inline;fill:#768caf;fill-opacity:0.51372549;fill-rule:nonzero;stroke:none;stroke-width:12.00217247;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+     id="ellipse5236"
+     cx="-189.05408"
+     cy="163.70734"
+     rx="65.770515"
+     ry="65.160393"
+     transform="matrix(-0.99258572,-0.12154669,-0.1178131,0.99303579,0,0)" />
+  <circle
+     transform="scale(-1,1)"
+     style="display:inline;fill:#000000;fill-opacity:0.51372549;fill-rule:nonzero;stroke:none;stroke-width:10;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
+     id="circle5238"
+     cx="-236.93684"
+     cy="339.26047"
+     r="51.846859" />
 </svg>
 </div>
 
