--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Micael Carlstedt Consulting AB</title>
 	
   <link rel="stylesheet" href="index.css">
+  <link rel="icon" href="favicon.png">
   
 </head>
 <body>
